03-Sep-2015 Laurent Duflot
	* tag as -49

26-Aug-2015 Geraldine
	* Added lepton isolation variables in CRWT

26-Aug-2015 Geraldine Conti
	* Added reclustering and boson tagging variables in the ReclTree
	* ZeroLeptonCR3L.cxx, ZeroLeptonCRY.cxx, ZeroLeptonCRZ.cxx,
	ZeroLeptonCRWT.cxx, ZeroLeptonSR.cxx : changed FillNTReclusteringVars
	function and added boson tagging calculations in CRWT, CRZ and SR
	* Added ReclJetMass,ReclJetPt,ReclJetEta,ReclJetPhi,D2,isWmedium,
	isWtight,isZmedium,isZtight in FillNTReclusteringVars in
	PhysObjProxyUtils.cxx/h
	* Variables added in ZeroLeptonNTVars.cxx/h
	* zerolepton.config : added global variable doRecl (still commented
	out, because there is still a bug to fix)

26-Aug-2015 Geraldine Conti
	* Added CR3L code :
	* ZeroLeptonCR3L.cxx/h added
	* zerolepton.config, zeroleptontruth.config : added cr3l, vr3l
	* LinkDef.h : added CR3L
	* ZeroLeptonNTVars.cxx/h : added variables for CL3L

26-Aug-2015 Geraldine Conti
	* Code for new reclustering added:
	* INSTALL : added line for new package xAODJetReclustering
	* PhysObjProxyFiller.cxx/h : initialization of the reclustering
	tool,added function FillJetReclProxies to fill recl. jets
	* ZeroLeptonCRWT.cxx/h, ZeroLeptonCRY.cxx/h, ZeroLeptonCRZ.cxx/h
	ZeroLeptonDataDrivenQCD.cxx, ZeroLeptonSR.cxx/h : added bool m_doRecl,
	std::string m_suffixRecl (needed to give different names in the recljet
	collections) in PhysObjProxyFiller
	* Makefile.RootCore : added dependence to new package
	* BosonTagging.cxx/h

26-Aug-2015 Geraldine Conti
	* Added phTruthType, phTruthOrigin, phisEMvalue needed for ABCD method
	in ZeroLeptonCRY.cxx/h and ZeroLeptonNTVars.cxx/h

14-Aug-2015 Laurent Duflot
	* MCInfoProcessor: add option to produce a JSON file with hardproc
	informations to allow building a DB of initial harproc counts
	(needed for proper normalisation of multi process samples)
	* zson.config: example config file for a job producing json hardproc file.