@@ -1,3 +1,6 @@
+09-Sep-2015 Geraldine Conti
+	* Added variable for lepton pT coming from W in CR3L
+
 03-Sep-2015 Laurent Duflot
 	* tag as -49
 
